# kernelbench-tinker

./: .env.example  README.md  justfile  pyproject.toml
kernel_rl/config/: rl_kernelbench.yaml
kernel_rl/envs/: kernelbench_client.py  kernelbench_env.py
kernel_rl/modal/: evaluator.py
kernel_rl/scripts/: train_kernel_rl.py
kernel_rl/training/: loop.py  reward.py
src/kernelbench_tinker/config/: rl_kernelbench.yaml  rl_kernelbench_stage1.yaml
src/kernelbench_tinker/envs/: kernelbench_client.py  kernelbench_env.py  multiturn_kernelbench_env.py
src/kernelbench_tinker/evaluation/: eval_kernelbench.py
src/kernelbench_tinker/modal/: app.py  evaluator.py
src/kernelbench_tinker/scripts/: eval_kernel_rl.py  run_and_check.py  train_kernel_rl.py
src/kernelbench_tinker/training/: loop.py  models.py  reward.py
